Rename AssessmentAnswerType to AssessmentQuestion
