# swagger/v1/swagger.json
@@ -39,8 +39,8 @@
       "AssessmentAnswer": {
         "$ref": "assessment_answer.json#/AssessmentAnswer"
       },
-      "AssessmentAnswerType": {
-        "$ref": "assessment_answer_type.json#/AssessmentAnswerType"
+      "AssessmentQuestion": {
+        "$ref": "assessment_question.json#/AssessmentQuestion"
       },
       "ProfileIdentifier": {
         "$ref": "profile_identifier.json#/ProfileIdentifier"
@@ -660,7 +660,7 @@
         }
       }
     },
-    "/reference/assessment_answer_types": {
+    "/reference/assessment_questions": {
       "get": {
         "summary": "Returns a list of move detail types filtered by category and/or user type",
         "tags": [
@@ -696,7 +696,7 @@
             "content": {
               "application/vnd.api+json": {
                 "schema": {
-                  "$ref": "get_assessment_answer_types_responses.json#/200"
+                  "$ref": "get_assessment_questions_responses.json#/200"
                 }
               }
             }
@@ -706,7 +706,7 @@
             "content": {
               "application/vnd.api+json": {
                 "schema": {
-                  "$ref": "get_assessment_answer_types_responses.json#/401"
+                  "$ref": "get_assessment_questions_responses.json#/401"
                 }
               }
             }
@@ -716,7 +716,7 @@
             "content": {
               "application/vnd.api+json": {
                 "schema": {
-                  "$ref": "get_assessment_answer_types_responses.json#/415"
+                  "$ref": "get_assessment_questions_responses.json#/415"
                 }
               }
             }
